# ext-nuitka-collab

./: .gitignore  DecoExample.py  MiniNestedAnnotationsUsingCloudpickle.py  README.md  requirements.txt
annotations_example/: pyproject.toml
annotations_example/annotations/: file.py
cloudpickle_example/: pyproject.toml
cloudpickle_example/numeus/cloudpickle/: file.py
decorator_example/: pyproject.toml
decorator_example/numeus/decorator/: file.py
defaults_example/: pyproject.toml
defaults_example/defaults/: file.py
namespace_package_example/: pyproject.toml
namespace_package_example/numeus/package/: file.py
tests/: test_annotations.py  test_cloudpickle.py  test_decorator.py  test_defaults.py  test_namespace_package.py
