[project]
name = 'numeus-annotations-package'
version = '1'
requires-python = '==3.10.*'

[build-system]
requires = [
    'dill',
    'nuitka @ https://github.com/Nuitka/Nuitka/archive/factory.zip',
    'setuptools',
    'toml',
    'wheel',
]
build-backend = 'nuitka.distutils.Build'

[tool.setuptools.packages.find]
include = ['annotations*']

[tool.nuitka]
enable-plugin = 'dill-compat'
